workspace(name = "com_google_absl")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_googletest",
    sha256 = "b976cf4fd57b318afdb1bdb27fc708904b3e4bed482859eb94ba2b4bdd077fe2",
    strip_prefix = "googletest-f8d7d77c06936315286eb55f8de22cd23c188571",
    urls = ["https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip"],
)

http_archive(
    name = "com_github_nst_json_test_suite",
    build_file = "//third_party:com_github_nst_json_test_suite.BUILD",
    sha256 = "c9e3e442238a158bbf0df22a270df3de412df5ee4dccc6f96712ba5a2e1038ac",
    strip_prefix = "JSONTestSuite-984defc2deaa653cb73cd29f4144a720ec9efe7c",
    urls = ["https://github.com/nst/JSONTestSuite/archive/984defc2deaa653cb73cd29f4144a720ec9efe7c.zip"],
)

http_archive(
    name = "hedron_compile_commands",
    sha256 = "05f7fb324290c147ed29361a6a6fef7459c61816084fc07b3676a9639f4fcab7",
    strip_prefix = "bazel-compile-commands-extractor-eca42c63700fccdc49cf58177e0a96f0f6075a68",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/eca42c63700fccdc49cf58177e0a96f0f6075a68.tar.gz",
)
