
cc_binary(
    name = "gron",
    srcs = ["gron.c"],
    deps = [
        "//src:jsonst",
        "//src:jsonst_util",
    ],
    data = ["testdata/docker-inspect.json"],
)

cc_binary(
    name = "data",
    srcs = ["data.c"],
    deps = [
        "//src:jsonst",
        "//src:jsonst_cstd",
    ],
    data = ["testdata/fluglaerm-iselisberg.json"],
)
