load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "jsonst",
    srcs = [
        "jsonst.c",
    ],
    hdrs = ["jsonst.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "jsonst_test_util",
    testonly = True,
    srcs = ["jsonst_test_util.cc"],
    hdrs = ["jsonst_test_util.h"],
    deps = [
        ":jsonst",
        ":jsonst_util",
        "@com_google_googletest//:gtest",
    ],
)

cc_test(
    name = "jsonst_test",
    size = "small",
    srcs = ["jsonst_test.cc"],
    deps = [
        ":jsonst",
        ":jsonst_test_util",
        "@com_google_googletest//:gtest_main",
    ],
    # Work around test run .so loading issue.
    linkstatic = True,
)

cc_test(
    name = "jsonst_test_corpus",
    size = "small",
    srcs = ["jsonst_test_corpus.cc"],
    data = [
        "@com_github_nst_json_test_suite//:test_parsing",
        "@com_github_nst_json_test_suite//:test_transform",
    ],
    deps = [
        ":jsonst",
        ":jsonst_test_util",
        "@com_google_googletest//:gtest_main",
    ],
    # Work around test run .so loading issue.
    linkstatic = True,
)

cc_library(
    name = "jsonst_util",
    srcs = ["jsonst_util.c"],
    hdrs = ["jsonst_util.h"],
    visibility = ["//visibility:public"],
    deps = [":jsonst"],
)

cc_library(
    name = "jsonst_cstd",
    hdrs = ["jsonst_cstd.h"],
    visibility = ["//visibility:public"],
    deps = [":jsonst"],
)

cc_test(
    name = "jsonst_cstd_test",
    size = "small",
    srcs = ["jsonst_cstd_test.cc"],
    data = ["testdata/test.json"],
    deps = [
        ":jsonst_cstd",
        "@com_google_googletest//:gtest_main",
    ],
    # Work around test run .so loading issue.
    linkstatic = True,
)
